make urls configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.jackson.date-format=yyyy-MM-dd
-nasa.api.key=YOUR_API_KEY_HERE
+nasa.api.key=DEMO_KEY
+
+nasa.api.availabledatesurl=https://api.nasa.gov/EPIC/api/natural/all?api_key=$API_KEY_PLACE_HOLDER$
+nasa.api.imagedataurl=https://api.nasa.gov/EPIC/api/natural/date/$DATE_PLACE_HOLDER$?api_key=$API_KEY_PLACE_HOLDER$
+nasa.api.downloadimageurl=https://api.nasa.gov/EPIC/archive/natural/$DATE_PLACE_HOLDER$/png/$IMAGE_NAME_PLACE_HOLDER$.png?api_key=$API_KEY_PLACE_HOLDER$
+nasa.api.placeholder.date=$DATE_PLACE_HOLDER$
+nasa.api.placeholder.imagename=$IMAGE_NAME_PLACE_HOLDER$
+nasa.api.placeholder.api.key=$API_KEY_PLACE_HOLDER$
